Thu Apr  7 13:08:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp
	  (visit_valuetype):

	  Do not continue if the visitor is being called recursively.
	  Addresses an infinite recursion run-time problem.

	  (visit_members):

	  Fixed off-by-one error that prevented a comma from being placed
	  between field array elements.

	* TAO_IDL/be_include/be_visitor_typecode/value_typecode.h:

	  Added new "in_recursion_" member that is used to keep track of
	  recursion.

Thu Apr  7 12:44:38 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/objref_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
	* TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
	* TAO_IDL/be_include/be_visitor_typecode/typecode_defn.h:

	  Fixed/improved support for TypeCodes of forward declared types,
	  and member TypeCode generation.

	* tao/TypeCode.cpp:

	  Added missing TAO::Objref_Traits<> template specializations that
	  were lost during the typecode-rewrite branch merge.  Fixes
	  "unresolved symbol" link-time errors.

Thu Apr  7 09:25:24 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any_Basic_Impl.cpp:

          Added code in the constructor to strip away the aliases
          (if any) of the typecode argument before getting and
          storing the typecode kind. The original typecode itself
          is still stored in the Any_Impl base class member as
          before. This new behavior solves problems encountered
          with repeated extraction from and marshaling of Anys
          containing an aliased basic type. Thanks to Joerg
          Rockel <joerg.rockel@nokia.com> and Torsten Kuepper
          <torsten.kuepper@nokia.com> for their discovery,
          comments, and suggested fixes for this bug. This fix