@@ -1,3 +1,12 @@
+Thu Apr  7 13:18:09 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* TAO_IDL/be/be_array.cpp (compute_tc_name):
+	* TAO_IDL/be/be_sequence.cpp (compute_tc_name):
+	* TAO_IDL/be/be_string.cpp (compute_tc_name):
+	
+	  Corrected sprintf() format specifier for unsigned long
+	  integers.  "%lu", not "%u".
+
 Thu Apr  7 13:08:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp
